--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Modificar.cshtml
@@ -124,6 +124,12 @@
 
         GridView_CambioProductoDet.PerformCallback();
     };
+
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location + "/Reportes/FacturacionReportes/FAC_012?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa +"&IdSucursal=" +@Model.IdSucursal +"&IdBodega=" +@Model.IdBodega+"&IdCambio=" +@Model.IdCambio, '_blank');
+        win.focus();
+    }
 </script>
 @using (Html.BeginForm("Modificar", "CambioProducto", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
@@ -148,7 +154,15 @@
             </div>
         </div>
     }
-
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
     <div class="modal fade" id="ModalFacturas" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -218,6 +232,26 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-10 col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdNuevo"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","CambioProducto",new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
