--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
@@ -53,7 +53,7 @@
                     <div class="col-md-1">
                         <label for="IdNuevo"></label>
                         <div class="form-group">
-                            <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","Proforma",new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa },null)">
+                            <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","TransferenciasInventario",new { Area = "Inventario", IdEmpresa = Model.IdEmpresa },null)">
                                 <i class="fa fa-plus"></i>
                             </a>
                         </div>
